--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,13 +1,15 @@
-@import "base/page.scss";
-@import "base/link.scss";
-// @import "base/fonts";
-@import "base/paragraph.scss";
-@import "base/images.scss";
-@import "base/form.scss";
-// @import "object/white-space.scss";
-// @import "object/background.scss";
-// @import "object/border-radius.scss";
-// @import "object/font-color.scss";
-// @import "object/ellipsis.scss";
-// @import "object/font-size.scss";
-// @import "object/decoration.scss";
+@import "./base/page.scss";
+@import "./base/link.scss";
+@import "./base/paragraph.scss";
+@import "./base/images.scss";
+@import "./base/form.scss";
+
+@import "./acss/border.scss";
+@import "./acss/color.scss";
+@import "./acss/ellipsis.scss";
+@import "./acss/white-space.scss";
+@import "./acss/z-index.scss";
+
+// @import "./theme/css/default.scss";
+// @import "./theme/css/cool.scss";
+// @import "./theme/css/warm.scss";
