--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,6 +10,6 @@
 @import "./acss/white-space.scss";
 @import "./acss/z-index.scss";
 
-// @import "./theme/css/default.scss";
-// @import "./theme/css/cool.scss";
-// @import "./theme/css/warm.scss";
+@import "./theme/css/default.scss";
+@import "./theme/css/cool.scss";
+@import "./theme/css/warm.scss";
